Closed Bug 676188 Opened 13 years ago Closed 13 years ago

Misc misuses of PRBool caught by the compiler while attempting typedef bool PRBool

Categories

(Core :: General, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla9

People

(Reporter: mwu, Assigned: mwu)

References

Details

(Whiteboard: [inbound])

Attachments

(1 file)

Attached patch FixSplinter Review
Compilers catch the remaining problems that boolcheck doesn't when we do typedef bool PRBool.

Reviewers:

jimm:
 browser/components/shell/src/nsWindowsShellService.cpp               |    4 +-
 toolkit/components/parentalcontrols/nsParentalControlsServiceWin.cpp |   17 +++++++---

dwitte:
 extensions/cookie/nsCookiePermission.cpp                             |   10 +++--
 extensions/cookie/nsCookiePromptService.cpp                          |    2 -

roc:
 layout/tables/nsTableRowFrame.h                                      |    4 +-

dougt:
 modules/libreg/include/VerReg.h                                      |    2 -

bz:
 netwerk/base/src/nsAutodialWin.cpp                                   |    4 +-
 netwerk/base/src/nsStandardURL.h                                     |    2 -
 parser/htmlparser/src/CNavDTD.cpp                                    |    2 -

mak:
 toolkit/components/places/nsNavHistory.cpp                           |    2 -
Attachment #550310 - Flags: review?(roc)
Attachment #550310 - Flags: review?(mak77)
Attachment #550310 - Flags: review?(jmathies)
Attachment #550310 - Flags: review?(dwitte)
Attachment #550310 - Flags: review?(doug.turner)
Attachment #550310 - Flags: review?(bzbarsky)
Comment on attachment 550310 [details] [diff] [review]
Fix

For the CNavDTD code, I'd ask for an enum for the tristate, but that's all dead code anyway.

r=me on the netwerk and parser bits.
Attachment #550310 - Flags: review?(roc)
Attachment #550310 - Flags: review?(bzbarsky)
Attachment #550310 - Flags: review+
Attachment #550310 - Flags: review?(roc) → review+
Attachment #550310 - Flags: review?(mak77) → review+
Attachment #550310 - Flags: review?(jmathies) → review+
Attachment #550310 - Flags: review?(doug.turner) → review+
Comment on attachment 550310 [details] [diff] [review]
Fix

dwitte -> jst on cookie changes.
Attachment #550310 - Flags: review?(dwitte) → review?(jst)
Attachment #550310 - Flags: review?(jst) → review+
http://hg.mozilla.org/mozilla-central/rev/a513e2816eaf
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: