toolkit/components/parentalcontrols/nsParentalControlsServiceWin.cpp
@@ -233,10 +233,14 @@ nsParentalControlsServiceWin::RequestURIOverride(nsIURI *aTarget, nsIInterfaceRe
   if (hWnd == nsnull)
     hWnd = GetDesktopWindow();
 
+  BOOL ret;
   nsRefPtr<IWPCWebSettings> wpcws;
-  if (SUCCEEDED(mPC->GetWebSettings(NULL, getter_AddRefs(wpcws))))
+  if (SUCCEEDED(mPC->GetWebSettings(NULL, getter_AddRefs(wpcws)))) {
     wpcws->RequestURLOverride(hWnd, NS_ConvertUTF8toUTF16(spec).get(),
-                              0, NULL, _retval);
+                              0, NULL, &ret);
+    *_retval = ret;
+  }
+
 
   return NS_OK;
 }
@@ -308,11 +312,14 @@ nsParentalControlsServiceWin::RequestURIOverrides(nsIArray *aTargets, nsIInterfa
 
   if (!uriIdx)
     return NS_ERROR_INVALID_ARG;
- 
+
+  BOOL ret; 
   nsRefPtr<IWPCWebSettings> wpcws;
-  if (SUCCEEDED(mPC->GetWebSettings(NULL, getter_AddRefs(wpcws))))
+  if (SUCCEEDED(mPC->GetWebSettings(NULL, getter_AddRefs(wpcws)))) {
     wpcws->RequestURLOverride(hWnd, NS_ConvertUTF8toUTF16(rootSpec).get(),
-                             uriIdx, (LPCWSTR*)arrUrls.get(), _retval);
+                             uriIdx, (LPCWSTR*)arrUrls.get(), &ret);
+   *_retval = ret;
+  }
 
   // Free up the allocated strings in our array
   for (idx = 0; idx < uriIdx; idx++)
